# cpp-libparchis

./: .markdownlint.json  CMakeLists.txt  CMakeLists_8txt.html  LICENSE.md  PBoardMemento_8cpp.html  PBoardMemento_8cpp__incl.map  PBoardMemento_8cpp__incl.md5  PBoardMemento_8h.html  PBoardMemento_8h__dep__incl.map  PBoardMemento_8h__dep__incl.md5  PBoardMemento_8h__incl.map  PBoardMemento_8h__incl.md5  PBoardMemento_8h_source.html  PBoard_8cpp.html  PBoard_8cpp__incl.map  PBoard_8cpp__incl.md5  PBoard_8h.html  PBoard_8h__dep__incl.map  PBoard_8h__dep__incl.md5  PBoard_8h__incl.map  PBoard_8h__incl.md5  PBoard_8h_source.html  PCmd_8cpp.html  PCmd_8cpp__incl.map  PCmd_8cpp__incl.md5  PCmd_8h.html  PCmd_8h__dep__incl.map  PCmd_8h__dep__incl.md5  PCmd_8h__incl.map  PCmd_8h__incl.md5  PCmd_8h_source.html  PDebugObjC-Interface_8h.html  PDebugObjC-Interface_8h_source.html  PDebug_8cpp.html  PDebug_8cpp__incl.map  PDebug_8cpp__incl.md5  PDebug_8h.html  PDebug_8h__dep__incl.map  PDebug_8h__dep__incl.md5  PDebug_8h__incl.map  (+1128 more)
.github/workflows/: ubuntu.yml
app/: CMakeLists.txt  parchiscmd.cpp
cmake/: GitVersion.cmake
configured/: CMakeLists.txt  Doxyfile.in  gitversion.hpp.in
docs/: Doxyfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  (+40 more)
src/: CMakeLists.txt
src/libparchis/: CMakeLists.txt  PBoard.cpp  PBoard.h  PBoardMemento.cpp  PBoardMemento.h  PCmd.cpp  PCmd.h  PDebug.cpp  PDebug.h  PDebugObjC-Interface.h  PDice.cpp  PDice.h  PGame.cpp  PGame.h  PHuman.cpp  PParchis.cpp  PParchis.h  PPawn.cpp  PPawn.h  PPlayer.cpp  PPlayer.h  PPlayerMemento.cpp  PPlayerMemento.h  PRand.cpp  PRand.h  PRobotSimple.cpp  PRobotSmart.cpp  PRules.cpp  PRules.h  PSnapshot.cpp  PSnapshot.h  PSpace.cpp  PSpace.h  PTime.cpp  PTime.h  PVersion.cpp  PVersion.h
