configure_file(
    "config.hpp.in" "${CMAKE_BINARY_DIR}/configured_files/include/config.hpp"
    ESCAPE_QUOTES)

IF(EXISTS ${CMAKE_SOURCE_DIR}/.git)
  FIND_PACKAGE(Git)
  IF(GIT_FOUND)
    EXECUTE_PROCESS(
        COMMAND ${GIT_EXECUTABLE} describe --tags --long
        WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
        OUTPUT_VARIABLE "GITVERSION_FULL"
        ERROR_QUIET
        OUTPUT_STRIP_TRAILING_WHITESPACE)

    EXECUTE_PROCESS(
        COMMAND ${GIT_EXECUTABLE} describe --abbrev=0 --tags
        WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
        OUTPUT_VARIABLE "GITVERSION_TAG"
        ERROR_QUIET
        OUTPUT_STRIP_TRAILING_WHITESPACE)

    EXECUTE_PROCESS(
        COMMAND ${GIT_EXECUTABLE} rev-parse --short HEAD
        WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
        OUTPUT_VARIABLE "GITVERSION_COMMIT"
        ERROR_QUIET
        OUTPUT_STRIP_TRAILING_WHITESPACE)

    MESSAGE( STATUS "Git version: ${GITVERSION_FULL}" )
  ELSE(GIT_FOUND)
      SET(GITVERSION_FULL "v0.0.0-0-00000000")
      SET(GITVERSION_TAG "v0.0.0")
      SET(GITVERSION_COMMIT "00000000")
  ENDIF(GIT_FOUND)
ENDIF(EXISTS ${CMAKE_SOURCE_DIR}/.git)

CONFIGURE_FILE(
    "gitversion.hpp.in"
    "${CMAKE_BINARY_DIR}/configured_files/include/gitversion.hpp"
    ESCAPE_QUOTES)
